Deleted lazy to first image

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -53,7 +53,7 @@
 
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-576w.jpg?as=webp" media="(max-width: 575px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-576w.jpg" media="(max-width: 575px)" />
-              <img loading="lazy" class="img-responsive" src="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" alt="Estatua de Julio César en Roma">
+              <img class="img-responsive" src="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" alt="Estatua de Julio César en Roma">
             </picture>
           </div>
           <div class="slider__slide--grey-background">
